bugfix: css layout issues

--- a/src/main/ContactBtns.css
+++ b/src/main/ContactBtns.css
@@ -40,7 +40,6 @@
 	flex-wrap: wrap;
 	align-items: center;
 	margin-top: 2em;
-	margin-bottom: 24em;
 }
 
 @media (min-width: 1200px) {
