--- a/src/main/Stars.css
+++ b/src/main/Stars.css
@@ -18,10 +18,3 @@
 .ignore {
 	visibility: hidden;
 }
-
-@media (max-width: 1200px) {
-	.rocketContainerAcross,
-	.rocketContainerOrbit {
-		display: none;
-	}
-}
