--- a/src/main/rocket-ship/rocketShipOrbit.css
+++ b/src/main/rocket-ship/rocketShipOrbit.css
@@ -4,7 +4,7 @@
 	position: relative;
 	overflow: hidden;
 	bottom: 0;
-	left: 34%;
+	left: 32%;
 	height: 24em;
 	width: 24em;
 	animation: hide-orbit 16s infinite;
